--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: Blog
     env: python
     buildCommand: "python manage.py collectstatic --noinput && pip install gunicorn && pip install -r requirements.txt"
-    startCommand: "gunicorn Blog.wsgi"
+    startCommand: "gunicorn Blog.wsgi:application"
     static:       # Static route configuration
       - type: web
         name: static
