--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: Blog
     env: python
-    buildCommand: "python manage.py collectstatic --noinput && pip install -r requirements.txt && python manage.py migrate"
+    buildCommand: "python manage.py collectstatic --noinput && pip install -r requirements.txt && python manage.py makemigrations && python manage.py migrate"
     startCommand: "gunicorn Blog.wsgi:application"
     static:       # Static route configuration
       - type: web
